--- a/AuD.tex
+++ b/AuD.tex
@@ -553,7 +553,7 @@ Post-order: linker Teilbaum $\rightarrow$ rechter Teilbaum $\rightarrow$ Wurzel\
 
 \subsection{Suchen in Graphen}
 \textbf{Breitensuche(BFS)} \\V
-on einem Startknoten $S$ werden alle Knoten mit Abstand $k$ durchsucht. Der Suchradius breitet sich aus.\\
+on einem Startknoten $S$ werden alle Knoten mit Abstand $k$ durchsucht. Der Suchradius breitet sich aus. Neue Knoten kommen in eine Queue an zu besuchenden Knoten.\\
 BREITENSUCHE(v)\\
 %TODO Code\\
  \\
@@ -587,6 +587,32 @@ Verkettete Hashtabelle: Jedes Feld entspricht einer Liste die mehrere kollidiert
 	\item[chained-hash-search(T,k)]: Suche Element $k$ in der Liste $T[ h(k) ]$
 	\item[chained-hash-delete(T,x)]: entferne $x$ aus der Liste $T[h(x.schluessel)]$
 \end{description}
+
+\section{Fouriertransformation}
+Transformation eines periodischen Signals aus dem Zeit in den Frequenzbereich $\rightarrow$ Darstellung als Überlagerung von Sinus- und Kosinusfunktionen\\
+\textbf{Theorem:}\\
+Jede periodische Funktion $x(t)$ mit Periode $T$ lässt sich als $\sum_{i=-\infty}^\infty \alpha_i e^{j\frac{2\pi}{T}t}$
+\subsection{Diskrete Fouriertransformation (DFT)}
+\textbf{Geg.:} $x_0, ..., x_{N-1}$ mit $x_k = x(\frac{T}{N}k)$.
+Berechne \[\hat{x}_l = \dfrac{1}{N} \sum_{k=0}^{N-1}x_ke^{-j\frac{2\pi}{N}lk}\quad\forall l \in \{0,...,N-1\}\]
+$\Rightarrow$ DFT ist Polynomauswertung, einfache Implementierung $\O(n^2)$
+\subsection{Fast Fourier Transform (FFT)}
+Schnelle Polynomauswertung mit $N=2^k$.\\
+Input: Polynom P vom Grad N-1, Koeffizenten C\\
+Output: $R[l]$ enthält $P[W_N^l]$\\
+FFT($C,N,W_N$)\\
+1\qquad if (N == 1) return C;\\
+2\qquad $C_{odd}$ = [C[1], C[3], ..., C[N-1]];\\
+3\qquad $C_{even}$ = [C[0], C[2], ..., C[N-2]];\\
+4\qquad $R_{odd}$ = FFT($C_{odd}$, $N/2$, $W_N^2$);\\
+5\qquad $R_{even}$ = FFT($C_{even}$, $N/2$, $W_N^2$);\\
+6\qquad $W = 1$; // = $W_N^0$\\
+7\qquad for $l = 0$ to $N/2-1$\\
+8\qquad \qquad $R[l] = R_{even}[l] + W * R_{odd}[l]$;\\
+9\qquad \qquad $R[l + N/2] = R_{even}[l] - W * R_{odd}[l]$;\\
+10\quad\  \qquad $W *= W_N$; // $= W_N^l$\\
+11\quad\  return R;\\
+Für DFT: $W_N = e^{-j\frac{2\pi}{N}}$ und Ergebnis durch $N$ dividieren; $\O(n \log n)$
 
 \iffalse
 \section{Entropie}
